--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 java.runtime.version=11.0.3
 
-spring.datasource.url=jdbc:mysql://localhost:3306/sampledatabase
+spring.datasource.url=jdbc:mysql://localhost:3306/rakutech_db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
